{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 48,
  "lineage": "68438cd0-e6df-2d44-eb78-1c09b0f3a111",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-04T08:22:08.598-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hg-test-361420/global/firewalls/allow-web",
            "log_config": [],
            "name": "allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/networks/dev-hg-test-361420-vpc",
            "priority": 1000,
            "project": "hg-test-361420",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/firewalls/allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iap_to_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-04T13:42:45.656-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hg-test-361420/global/firewalls/ingress-allow-iap-to-ssh",
            "log_config": [],
            "name": "ingress-allow-iap-to-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/networks/dev-hg-test-361420-vpc",
            "priority": 1000,
            "project": "hg-test-361420",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/firewalls/ingress-allow-iap-to-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "iap-tunnel"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-04T08:22:08.555-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hg-test-361420/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/networks/dev-hg-test-361420-vpc",
            "priority": 1000,
            "project": "hg-test-361420",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "hugo-srv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-arm64-v20220901",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/zones/us-west1-a/disks/dev-hg-test-361420-hugosrv"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hg-test-361420/zones/us-west1-a/instances/dev-hg-test-361420-hugosrv",
            "instance_id": "6803604688290281671",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "Z6lLouFNW9s=",
            "name": "dev-hg-test-361420-hugosrv",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.203.167.206",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/networks/dev-hg-test-361420-vpc",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/regions/us-west1/subnetworks/dev-hg-test-361420-vpc-public-0",
                "subnetwork_project": "hg-test-361420"
              }
            ],
            "project": "hg-test-361420",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/zones/us-west1-a/instances/dev-hg-test-361420-hugosrv",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "allow-web",
              "iap-tunnel"
            ],
            "tags_fingerprint": "57BheWAXz2w=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/hg-test-361420/global/networks/dev-hg-test-361420-vpc",
            "mtu": 0,
            "name": "dev-hg-test-361420-vpc",
            "project": "hg-test-361420",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/networks/dev-hg-test-361420-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-04T08:22:11.327-07:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/hg-test-361420/regions/us-west1/subnetworks/dev-hg-test-361420-vpc-private-0",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "dev-hg-test-361420-vpc-private-0",
            "network": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/networks/dev-hg-test-361420-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "hg-test-361420",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/regions/us-west1/subnetworks/dev-hg-test-361420-vpc-private-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-04T08:22:11.256-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/hg-test-361420/regions/us-west1/subnetworks/dev-hg-test-361420-vpc-public-0",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "dev-hg-test-361420-vpc-public-0",
            "network": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/global/networks/dev-hg-test-361420-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "hg-test-361420",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hg-test-361420/regions/us-west1/subnetworks/dev-hg-test-361420-vpc-public-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}